# aegis

./: .gitignore  README.md
python/: main copy.py  main.py  output.avi  processed_video.avi  test.py
rust/: Cargo.toml
rust/src/: main copy.rs  main.rs
