[package]
name = "security"
version = "0.1.0"
edition = "2021"

[dependencies]
nokhwa = { version = "0.10", features = ["input-native"] }
tokio = { version = "1.28", features = ["full"] }
image = "0.24"
bytes = "1.4"
reqwest = { version = "0.11", features = ["json", "multipart"] }
anyhow = "1.0"
tokio-tungstenite = "0.26.1"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

